Implement MapStruct Library to Impl service and define util interface